CHANGES IN VERSION 0.6.4
------------------------
 o typos in man [2015-02-19 Thu]
 
CHANGES IN VERSION 0.6.3
------------------------
 o new fig in Pbase-data vignette [2015-02-14 Sat]
 o new section for pmapToGenome in mapping vignette [2015-02-14 Sat]

CHANGES IN VERSION 0.6.2
------------------------
 o Add uniprot release to p metadata [2015-02-14 Sat]
 o added a metadata update method [2015-02-14 Sat]
 
CHANGES IN VERSION 0.6.1
------------------------
 o [p]mapToGenome methods [2015-02-14 Sat]
 
CHANGES IN VERSION 0.6.0
------------------------
 o fixed typos in vigs [2015-02-12 Thu]
 o new etrid2grl function to convert Ensembl transcript identifiers to
   GRangesList objects [2015-02-13 Fri]
 o initial mapToGenome function [2015-02-13 Fri]
 o regenerated p data using latest UniProt release and added
   acols(p)$ENST [2015-02-13 Fri]
 
CHANGES IN VERSION 0.5.5
------------------------
 o various fixes in vignettes [2015-02-12 Thu]
 
CHANGES IN VERSION 0.5.4
------------------------
 o Ensembl - UCSC mapping vignette [2015-02-11 Wed]
  
CHANGES IN VERSION 0.5.3
------------------------
 o Render vignettes with rmarkdown [2015-02-11 Wed]
 o Improve mapping vignette [2015-02-11 Wed]
 
CHANGES IN VERSION 0.5.2
------------------------
 o Adapt to new `addIdentification` signature in MSnbase >= 1.15.5.
   [2015-02-10 Tue]

CHANGES IN VERSION 0.5.1
------------------------
 o Update vignette since TxDb's UCSC coordinates differ from those
   fetched from Ensembl via biomaRt. [2015-01-05 Mon]
 o Add `isCleaved` method. [2015-01-03 Sat]
 o Add `calculateHeavyLabels`; closes #6 and cleaver#5. [2015-01-03 Sat]

CHANGES IN VERSION 0.5.0
------------------------
 o Bump version for new Bioc release.

CHANGES IN VERSION 0.2.2
------------------------
 o Fix warning re undocumented '[' and siglist 'Proteins,ANY,ANY,ANY'
   [2014-10-03 Fri]

CHANGES IN VERSION 0.2.1
------------------------
 o Counting id files when adding [2014-09-17 Wed]

CHANGES IN VERSION 0.2.0