@@ -1,6 +1,7 @@
 CHANGES IN VERSION 0.6.4
 ------------------------
  o typos in man [2015-02-19 Thu]
+ 0 Added use.names argument ot etrid2gel [2015-02-19 Thu]
  
 CHANGES IN VERSION 0.6.3
 ------------------------
